# Scoundrel

./: .gitignore  .projectile  CLAUDE.md  CMakeLists.txt  IDEAS.md  LICENSE  build.bat  build.sh
libraries/SDL-release-3.4.8/test/: Makefile  childprocess  testasyncio  testaudio  testaudiostreamdynamicresample  testcamera  testclipboard  testcolorspace  testcontroller  testdialog  testdlopennote  testgpu_simple_clear  testgpu_spinning_cube  testgpurender_effects  testgpurender_msdf  testmanymouse  testmodal  testoffscreen  testpalette  testpen  testpopup  testprocess  testrotate  testrwlock  testsoftwaretransparent  testspritesurface  testsymbols  testtime  testtray  testwaylandcustom
shaders/: hello_world.glsl  text_sdf.glsl
src/: application.cpp  application.h  audio.cpp  audio.h  camera.cpp  camera.h  keyboard.cpp  keyboard.h  log.cpp  log.h  mouse.cpp  mouse.h  random.h  renderer.cpp  renderer.h  scoundrel.cpp  texture.cpp  texture.h  typedefs.h
